# project_template

./: .gitignore  AGENTS.md  LICENSE  README.md  README_OLD.md  VERIFICATION_GUIDE.md  main.py  pip.conf  pyproject.toml  requirements.txt
.githooks/: pre-push
.github/scripts/: check_agents_governance.py  check_module_docstrings.py
.github/workflows/: agents-governance.yml  docs_automation.yml  docs_book.yml  import_module_origin_audit.yml  internal-pypi-governance.yml  oss_licenses.yml  pr_gate.yml  python-governance.yml  qa_gate.yml
docs/dev/notes/: DEVELOPER_GUIDE.md
docs/devops/: CI_GENERATED_ARTIFACTS.md
ops/ci/: generate_import_module_origin_audit.py  verify_internal_pypi_sources.py
scripts/: setup_dev_environment.py
scripts/ci/: list_ci_generated_artifacts.py
scripts/docs/: build_docs_book.py  normalize_readme.py
scripts/governance/: sync_agents_base.py
src/: app.py  main_plugin.py
