[build-system]
requires = ["setuptools>=61", "packaging>=23"]
build-backend = "setuptools.build_meta"

[project]
name = "project-template"
version = "0.1.0"
description = "AiLab standard project template"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "TITManagement" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
project-template = "src.app:main"

[tool.setuptools]
packages = ["src"]
