[build-system]
requires = ["setuptools>=61", "packaging>=23"]
build-backend = "setuptools.build_meta"

[project]
name = "project-template"
version = "0.1.0"
description = "AiLab standard project template"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Takaya Inoue" }]
maintainers = [{ name = "AUTO Kobo headquarters" }]
license = { text = "MIT" }
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/TITManagement/project_template"
Repository = "https://github.com/TITManagement/project_template"
Documentation = "https://github.com/TITManagement/project_template#readme"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6", "mypy>=1.8"]

[project.scripts]
project-template = "src.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]

[tool.metadata]
copyright = "AUTO kobo"
